--- a/webapp/src/ionicapp/www/templates/addOrganizationGroup.html
+++ b/webapp/src/ionicapp/www/templates/addOrganizationGroup.html
@@ -5,7 +5,7 @@
   <ion-content padding="true" class="has-header">
     <div class="spacer" style="width: 300px; height: 20px;"></div>
     <form id="addOrganizationGroup-form244" class="list page_width_small" ng-show="organization == null">
-      <button id="addOrganizationGroup-button183" style="font-weight:600;font-size:18px;" class="button button-positive button-block button-clear icon-right ion-android-settings">{{ data.orgname }}</button>
+      <button id="addOrganizationGroup-button183" style="font-weight:600;font-size:18px;" class="button button-positive button-block button-clear">{{ data.orgname }}</button>
       <div id="addOrganizationGroup-markdown500" class="show-list-numbers-and-dots">
         <p style="color:#AAAAAA;font-size:12px;">Create groups within the organization to separate the users based on their roles or tasks.</p>
       </div>
