--- a/webapp/src/ionicapp/www/templates/addOrganizationPolicy.html
+++ b/webapp/src/ionicapp/www/templates/addOrganizationPolicy.html
@@ -5,7 +5,7 @@
   <ion-content padding="true" class="has-header">
     <div class="spacer" style="width: 300px; height: 20px;"></div>
     <form id="addOrganizationPolicy-form247" class="list page_width_small" ng-show="organization == null">
-      <button id="addOrganizationPolicy-button189" style="font-weight:600;font-size:18px;" class="button button-positive button-block button-clear icon-right ion-android-settings">{{ data.orgname }}</button>
+      <button id="addOrganizationPolicy-button189" style="font-weight:600;font-size:18px;" class="button button-positive button-block button-clear">{{ data.orgname }}</button>
       <div id="addOrganizationPolicy-markdown510" class="show-list-numbers-and-dots">
         <p style="color:#AAAAAA;font-size:12px;">Create policies for the organization and then assign policies to the user groups.</p>
       </div>
