--- a/webapp/src/ionicapp/www/templates/addOrganizationUser.html
+++ b/webapp/src/ionicapp/www/templates/addOrganizationUser.html
@@ -5,7 +5,7 @@
   <ion-content padding="true" class="has-header">
     <div class="spacer" style="width: 300px; height: 20px;"></div>
     <form id="addOrganizationUser-form242" class="list page_width_small" ng-show="organization == null">
-      <button id="addOrganizationUser-button193" style="font-weight:600;font-size:18px;" class="button button-positive button-block button-clear icon-right ion-android-settings">{{ data.orgname }}</button>
+      <button id="addOrganizationUser-button193" style="font-weight:600;font-size:18px;" class="button button-positive button-block button-clear">{{ data.orgname }}</button>
       <div id="addOrganizationUser-markdown509" class="show-list-numbers-and-dots">
         <p style="color:#AAAAAA;font-size:12px;">Invite single or multiple users (new or existing user) to join the organization by specifying their email addresses.</p>
       </div>
