--- a/webapp/src/ionicapp/www/templates/updateOrganizationGroupPolicies.html
+++ b/webapp/src/ionicapp/www/templates/updateOrganizationGroupPolicies.html
@@ -5,7 +5,7 @@
   <ion-content padding="true" class="has-header">
     <div class="spacer" style="width: 300px; height: 20px;"></div>
     <form id="updateOrganizationGroupPolicies-form249" class="list page_width_small" ng-show="organization == null">
-      <button id="updateOrganizationGroupPolicies-button204" style="font-weight:600;font-size:18px;" class="button button-positive button-block button-clear icon-right ion-android-settings">{{ data.orgname }}</button>
+      <button id="updateOrganizationGroupPolicies-button204" style="font-weight:600;font-size:18px;" class="button button-positive button-block button-clear">{{ data.orgname }}</button>
       <div id="updateOrganizationGroupPolicies-markdown511" class="show-list-numbers-and-dots">
         <p style="color:#3C5A99;font-size:18px;">{{ data.groupname }}</p>
       </div>
