Implement policies feature for organizations

--- a/webapp/src/ionicapp/www/templates/addOrganizationUser.html
+++ b/webapp/src/ionicapp/www/templates/addOrganizationUser.html
@@ -1,4 +1,4 @@
-<ion-view title="Add Organization User" hide-back-button="true" nav-transition="none" id="page67" class="page_width" ng-click="submitRefresh()">
+<ion-view title="Add Organization User" hide-back-button="true" nav-transition="none" id="page67" class="page_width">
   <ion-nav-buttons side="left" class="has-header">
     <button class="button button-icon icon ion-android-close" ng-click="exitPage()"></button>
   </ion-nav-buttons>
