Supported enforcement of organization membership for all related APIs

--- a/webapp/src/ionicapp/www/templates/menu.html
+++ b/webapp/src/ionicapp/www/templates/menu.html
@@ -20,26 +20,26 @@
         <ion-item class="item-divider" id="menu-list-item-divider28"> </ion-item>
         <ion-item class="item-icon-left positive menu_margin" id="menu-list-item2" ui-sref="menu.profile({&quot;username&quot;:&quot;&quot;+ data.username +&quot;&quot;,&quot;token&quot;:&quot;&quot;+ data.token +&quot;&quot;})" menu-close="">
           <i class="icon ion-ios-contact"></i>Profile</ion-item>
-        <ion-item class="item-icon-left positive menu_margin" id="menu-list-item7" ui-sref="menu.credits({&quot;username&quot;:&quot;&quot;+ data.username +&quot;&quot;,&quot;token&quot;:&quot;&quot;+ data.token +&quot;&quot;})"
-          menu-close="">
-          <i class="icon ion-cash"></i>Credits</ion-item>
         <ion-item class="item-divider" id="menu-list-item-divider25"> </ion-item>
         <ion-item class="item-icon-left positive menu_margin" id="menu-list-item11" ui-sref="menu.organizations({&quot;username&quot;:&quot;&quot;+ data.username +&quot;&quot;,&quot;token&quot;:&quot;&quot;+ data.token +&quot;&quot;})" menu-close="">
           <i class="icon ion-ios-color-filter-outline"></i>Organizations</ion-item>
+        <ion-item class="item-icon-left positive menu_margin" id="menu-list-item7" ui-sref="menu.credits({&quot;username&quot;:&quot;&quot;+ data.username +&quot;&quot;,&quot;token&quot;:&quot;&quot;+ data.token +&quot;&quot;})"
+          menu-close="">
+          <i class="icon ion-cash"></i>Credits</ion-item>
         <ion-item class="item-icon-left positive menu_margin" id="menu-list-item1" ui-sref="menu.gateways({&quot;username&quot;:&quot;&quot;+ data.username +&quot;&quot;,&quot;token&quot;:&quot;&quot;+ data.token +&quot;&quot;})"
           menu-close="">
           <i class="icon ion-ios-keypad"></i>Devices</ion-item>
         <ion-item class="item-icon-left positive menu_margin" id="menu-list-item8" ui-sref="menu.sensorDashboard({&quot;devicename&quot;:&quot;All devices&quot;,&quot;username&quot;:&quot;&quot;+ data.username +&quot;&quot;,&quot;token&quot;:&quot;&quot;+ data.token +&quot;&quot;,&quot;devicestatus&quot;:&quot;&quot;,&quot;deviceid&quot;:&quot;&quot;,&quot;serialnumber&quot;:&quot;&quot;,&quot;location&quot;:&quot;&quot;})"
           menu-close="">
           <i class="icon ion-ios-analytics"></i>Dashboard</ion-item>
-        <ion-item class="item-divider" id="menu-list-item-divider27"> </ion-item>
-        <ion-item class="item-icon-left positive menu_margin" id="menu-list-item18" ui-sref="menu.alerts({&quot;username&quot;:&quot;&quot;+ data.username +&quot;&quot;,&quot;token&quot;:&quot;&quot;+ data.token +&quot;&quot;})" menu-close="">
+        <ion-item class="item-icon-left positive menu_margin" id="menu-list-item18" ui-sref="menu.alerts({&quot;username&quot;:&quot;&quot;+ data.username +&quot;&quot;,&quot;token&quot;:&quot;&quot;+ data.token +&quot;&quot;})"
+          menu-close="">
           <i class="icon ion-alert-circled"></i>Alerts</ion-item>
         <ion-item class="item-icon-left positive menu_margin" id="menu-list-item6" ui-sref="menu.troubleshooting({&quot;username&quot;:&quot;&quot;+ data.username +&quot;&quot;,&quot;token&quot;:&quot;&quot;+ data.token +&quot;&quot;})"
           menu-close="">
           <i class="icon ion-ios-briefcase"></i>Troubleshooting</ion-item>
-        <ion-item class="item-icon-left positive menu_margin" id="menu-list-item17" ui-sref="menu.about({&quot;username&quot;:&quot;&quot;+ data.username +&quot;&quot;,&quot;token&quot;:&quot;&quot;+ data.token +&quot;&quot;})"
-          menu-close="">
+        <ion-item class="item-divider" id="menu-list-item-divider27"> </ion-item>
+        <ion-item class="item-icon-left positive menu_margin" id="menu-list-item17" ui-sref="menu.about({&quot;username&quot;:&quot;&quot;+ data.username +&quot;&quot;,&quot;token&quot;:&quot;&quot;+ data.token +&quot;&quot;})" menu-close="">
           <i class="icon ion-ios-information"></i>About</ion-item>
         <ion-item class="item-icon-left positive menu_margin" id="menu-list-item5" ui-sref="menu.feedback({&quot;username&quot;:&quot;&quot;+ data.username +&quot;&quot;,&quot;token&quot;:&quot;&quot;+ data.token +&quot;&quot;})"
           menu-close="">
