Added LDSBUS pages

--- a/webapp/src/ionicapp/www/templates/gateway.html
+++ b/webapp/src/ionicapp/www/templates/gateway.html
@@ -46,18 +46,56 @@
       </div>
     </div>
     <div class="spacer" style="height: 20px;"></div>
-    <div class="list card widget_button_half_device" id="gateway-card210" ng-click="submitUART()">
+    <div class="list card widget_button_half_device" id="gateway-card210" ng-click="submitLDSBUS(1)">
       <div class="item item-body" id="gateway-list-item-container33">
         <div id="gateway-markdown502" style="text-align:center;" class="show-list-numbers-and-dots">
+          <p style="margin-top:0px;color:#3C5A99;font-size:18px;">
+            <strong> LDS BUS 1 </strong>
+          </p>
+        </div>
+      </div>
+    </div>
+    <div class="list card widget_button_half_device" id="gateway-card221" ng-click="submitLDSBUS(2)">
+      <div class="item item-body" id="gateway-list-item-container35">
+        <div id="gateway-markdown525" style="text-align:center;" class="show-list-numbers-and-dots">
+          <p style="margin-top:0px;color:#3C5A99;font-size:18px;">
+            <strong> LDS BUS 2 </strong>
+          </p>
+        </div>
+      </div>
+    </div>
+    <div class="spacer" style="width: 747.778px; height: 3px;"></div>
+    <div class="list card widget_button_half_device" id="gateway-card212" ng-click="submitLDSBUS(3)">
+      <div class="item item-body" id="gateway-list-item-container41">
+        <div id="gateway-markdown505" style="text-align:center;" class="show-list-numbers-and-dots">
+          <p style="margin-top:0px;color:#3C5A99;font-size:18px;">
+            <strong> LDS BUS 3 </strong>
+          </p>
+        </div>
+      </div>
+    </div>
+    <div class="list card widget_button_half_device" id="gateway-card225" ng-click="submitUART()">
+      <div class="item item-body" id="gateway-list-item-container50">
+        <div id="gateway-markdown533" style="text-align:center;" class="show-list-numbers-and-dots">
           <p style="margin-top:0px;color:#3C5A99;font-size:18px;">
             <strong> UART </strong>
           </p>
         </div>
       </div>
     </div>
-    <div class="list card widget_button_half_device" id="gateway-card212" ng-click="submitGPIO()">
-      <div class="item item-body" id="gateway-list-item-container41">
-        <div id="gateway-markdown505" style="text-align:center;" class="show-list-numbers-and-dots">
+    <div class="spacer" style="width: 747.778px; height: 50px;"></div>
+    <div class="list card widget_button_half_device" id="gateway-card224" ng-click="submitUART()">
+      <div class="item item-body" id="gateway-list-item-container45">
+        <div id="gateway-markdown531" style="text-align:center;" class="show-list-numbers-and-dots">
+          <p style="margin-top:0px;color:#3C5A99;font-size:18px;">
+            <strong> UART </strong>
+          </p>
+        </div>
+      </div>
+    </div>
+    <div class="list card widget_button_half_device" id="gateway-card222" ng-click="submitGPIO()">
+      <div class="item item-body" id="gateway-list-item-container36">
+        <div id="gateway-markdown526" style="text-align:center;" class="show-list-numbers-and-dots">
           <p style="margin-top:0px;color:#3C5A99;font-size:18px;">
             <strong> GPIO </strong>
           </p>
